--- a/news-admin/package.json
+++ b/news-admin/package.json
@@ -9,8 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.2.1",
+    "js-cookie": "^3.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-chartjs-2": "^4.3.1",
+    "react-confirm-alert": "^3.0.6",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "react-js-pagination": "^3.0.3",
+    "react-quill": "^2.0.0",
+    "react-router-dom": "^6.4.5",
+    "recoil": "^0.7.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
